--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,5 @@
 @import "./base/common";
 @import "./base/reset";
 @import "./base/tab";
+@import "./components/home";
+@import "./components/sponsors";
