--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,3 +1,12 @@
 body{
     font-family: 'Roboto';
 }
+
+.container{
+    width: 1200px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+}
+
