--- a/src/sass/base/_tab.scss
+++ b/src/sass/base/_tab.scss
@@ -46,3 +46,17 @@
     
   }
   
+
+.settings__menu{
+    width: 346px;
+    height: 209px;
+}
+
+.settings__menu{
+height: 70px;
+width: 298px;
+}
+
+.tab__body{
+  padding-left: 200px;
+}
