--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,9 @@
 @import "./base/common";
 @import "./base/reset";
 @import "./base/tab";
-@import "./components/login/login";
 @import "./components/home";
 @import "./components/sponsors";
+@import "./components/school/dashboard";
+@import "./components/school/lessons";
+@import "./components/school/rewiews";
+
