--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -1,241 +1,303 @@
 .home__body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding-top: 110px;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding-top: 110px;
 }
 
 header {
-    background-color: #001C27;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    height: 135px;
-    display: flex;
-    align-items: center;
-    padding: 0 20px;
-    box-sizing: border-box;
-    outline: 5px solid white;
+  background-color: #001c27;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 135px;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  box-sizing: border-box;
+  outline: 5px solid white;
 }
 
 .header__logo {
-    color: #0ac6d0;
-    font-size: 50px;
+  color: #0ac6d0;
+  font-size: 50px;
 }
 
 .nav {
-    margin-left: 122px;
+  margin-left: 122px;
 }
 
 .nav__item {
-    margin-left: 80px;
-    font-size: 30px;
-    color: white;
-    font-weight: 400;
-    text-decoration: none;
+  margin-left: 80px;
+  font-size: 30px;
+  color: white;
+  font-weight: 400;
+  text-decoration: none;
 }
 
 .nav__item:first-child {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 .account__choose {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
 }
 
 .main__account__btn {
-    margin-left: 15px;
-    width: 150px;
-    height: 50px;
-    border-radius: 100px;
-    font-weight: 700;
-    font-size: 15px;
-    border: none;
-    cursor: pointer;
+  margin-left: 15px;
+  width: 150px;
+  height: 50px;
+  border-radius: 100px;
+  font-weight: 700;
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
 }
 
 .regButton {
-    background-color: #2D9CDB;
-    color: #fff;
+  background-color: #2d9cdb;
+  color: #fff;
 }
 
 .logButton {
-    background-color: #6C757D;
-    color: #fff;
+  background-color: #6c757d;
+  color: #fff;
+}
+
+.profile-header {
+  display: flex;
+  align-items: center;
 }
 
 .profile__circle {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #2D9CDB;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    margin-left: 15px;
-    cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #007bff;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
 }
 
-.logoutButton {
-    background-color: #DC3545;
-    color: #fff;
-    border: none;
-    border-radius: 100px;
-    height: 50px;
-    width: 100px;
-    margin-left: 15px;
-    cursor: pointer;
+.hero {
+  flex-direction: column;
+  background-color: #001c27;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
-
-.hero{
-    flex-direction: column;
-    background-color: #001C27;
-    padding-top: 120px;
-    padding-bottom: 120px;
+.first__title {
+  font-size: 64px;
+  color: #fff;
+  margin-bottom: 200px;
+  width: 836px;
 }
 
-.first__title{
-    font-size: 64px;
-    color: #fff;
-    margin-bottom: 200px;
-    width: 836px;
+.hero .container {
+  display: block;
 }
 
-.hero .container{
-    display: block;
+.second__title {
+  text-align: center;
+  font-size: 64px;
+  color: #fff;
 }
 
-.second__title{
-    text-align: center;
-    font-size: 64px;
-    color: #fff;
-}
-
-.try__btn{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 80px;
-    width: 370px;
-    height: 100px;
-    border-radius: 50px;
-    font-size: 48px;
-    color: #fff;
-    background-color: #2D9CDB;
+.try__btn {
+  display: block;
+  margin: 80px auto 0;
+  width: 370px;
+  height: 100px;
+  border-radius: 50px;
+  font-size: 48px;
+  color: #fff;
+  background-color: #2d9cdb;
 }
 
 .footer {
-    padding-top: 53px;
-    padding-bottom: 53px;
-    background-color: #001C27;
-    outline: 5px solid white;
-    display: flex;
-    align-items: center;
+  padding: 53px 0;
+  background-color: #001c27;
+  outline: 5px solid white;
+  display: flex;
+  align-items: center;
 }
 
 .footer__logo {
-    color: #0ac6d0;
-    font-size: 50px;
+  color: #0ac6d0;
+  font-size: 50px;
 }
 
 .footer__list {
-    margin-top: 25px;
+  margin-top: 25px;
 }
 
 .address__item {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .address__item:last-child {
-    margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .address__link {
-    font-size: 20px;
-    color: white;
-    text-decoration: none;
+  font-size: 20px;
+  color: white;
+  text-decoration: none;
 }
 
 .work__send {
-    display: block;
-    margin-left: auto;
+  display: block;
+  margin-left: auto;
 }
 
 .work__title {
-    font-size: 20px;
-    color: #fff;
+  font-size: 20px;
+  color: #fff;
 }
 
 .work__send__btn {
-    background-color: #2D9CDB;
-    color: #fff;
-    width: 200px;
-    font-size: 16px;
-    height: 50px;
-    margin-top: 40px;
-    border-radius: 30px;
-    border: none;
-    cursor: pointer;
+  background-color: #2d9cdb;
+  color: #fff;
+  width: 200px;
+  font-size: 16px;
+  height: 50px;
+  margin-top: 40px;
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
 }
 
 .work__description {
-    margin-top: 20px;
-    font-size: 16px;
-    color: #fff;
+  margin-top: 20px;
+  font-size: 16px;
+  color: #fff;
 }
 
-.register__modal, .login__modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    z-index: 1000;
-    text-align: center;
+.register__modal,
+.login__modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  z-index: 1000;
+  text-align: center;
 }
 
 .change__invisible {
-    display: none;
+  display: none;
 }
 
-.register__form, .login__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.register__form,
+.login__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.register__input__box, .login__input__box {
-    margin-bottom: 20px;
+.register__input__box,
+.login__input__box {
+  margin-bottom: 20px;
 }
 
-.register__social, .login__social {
-    margin: 5px;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 250px;
+.register__social,
+.login__social {
+  margin: 5px;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 250px;
 }
 
-.register__more, .login__more {
-    background-color: #2D9CDB;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.register__more,
+.login__more {
+  background-color: #2d9cdb;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .error-message {
-    color: red;
-    font-size: 14px;
-    margin-top: 10px;
+  color: red;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.cabinetLink {
+  display: none;
+  background-color: #2D9CDB;
+  color: #fff;
+  width: 370px;
+  height: 100px;
+  border-radius: 50px;
+  font-size: 48px;
+  text-align: center;
+  text-decoration: none;
+  line-height: 100px;
+}
+
+.login__title {
+  font-weight: 400;
+  font-size: 96px;
+  text-align: center;
+  color: #000;
+}
+
+.login__inputs {
+  display: flex;
+  justify-content: center;
+  align-items: flex;
+  margin-top: 40px;
+}
+
+.login__input {
+  border: 5px solid #000;
+  border-radius: 10px;
+  width: 629px;
+  height: 93px;
+  font-weight: 400;
+  font-size: 48px;
+  text-align: center;
+  color: #000;
+}
+
+.login__button {
+  border-radius: 10px;
+  width: 629px;
+  height: 93px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 48px;
+  text-align: center;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  margin-top: 260px;
+}
+
+.logout__button {
+  margin-left: 30px;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #dc3545;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.logout__button:hover {
+  background-color: #c82333;
 }
