--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,4 +6,5 @@
 @import "./components/school/dashboard";
 @import "./components/school/lessons";
 @import "./components/school/rewiews";
+@import "./components/school/courses";
 
