--- a/src/sass/components/school/_lessons.scss
+++ b/src/sass/components/school/_lessons.scss
@@ -6,36 +6,35 @@
 .lessons__chapter-title{
     margin-top: 30px;
     margin-bottom: 10px;
+    font-size: 40px;
 }
 
 .lessons__chapter{
     display: flex;
     flex-wrap: wrap;
+    gap: 40px;
 }
 
 .lessons__lesson{
     width: 250px;
     height: 50px;
-    margin-left: 40px;
     background-color: #001C27;
     color: white;
     font-size: 32px;
     border-radius: 10px;
     display: flex;
     align-items: center;
+    border-left: #2D9CDB 5px solid;
 }
 
-.lessons__lesson:first-child{
-    margin-left: 0;
-}
+
 
 .lessons__lesson-link {
     display: inline-block;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 20px;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
     text-align: center;
-    font-size: 32px;
 }
