--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -88,7 +88,7 @@ header {
 
 .hero {
   flex-direction: column;
-  background-color: #fff;
+  background-color: rgb(rgb(2, 32, 122));
   padding-top: 120px;
   padding-bottom: 120px;
 }
