--- a/src/sass/components/school/_lessons.scss
+++ b/src/sass/components/school/_lessons.scss
@@ -1,137 +1,38 @@
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(5px);
+
+.lessons__chapter-title{
+    margin-top: 30px;
+    margin-bottom: 10px;
+    font-size: 40px;
 }
 
-.modal-content {
-    background-color: #fefefe;
-    margin: 10% auto;
-    padding: 20px;
-    border-radius: 10px;
-    width: 60%;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.course-button {
-    background-color: #001c27;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 5px;
-    margin: 5px 0;
-    transition: background-color 0.3s ease;
-}
-
-.course-button:hover {
-    background-color: #0ac6d0;
-}
-
-.added-courses {
-    margin-top: 20px;
-    padding: 20px;
-    border: 1px solid #001c27;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.course-box {
-    border: none;
-    border-radius: 5px;
-    padding: 15px;
-    margin-bottom: 15px;
-    background-color: #001c27;
-    color: white;
-    font-size: 18px;
-    text-align: center;
-    cursor: pointer;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-}
-
-.course-box:hover {
-    background-color: #0ac6d0;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.course-link {
-    color: white;
-    text-decoration: none;
-    display: block;
-    padding: 10px 20px;
-    font-size: 18px;
-}
-
-.course-link:hover {
-    text-decoration: none;
-}
-
-.modal h2 {
-    margin-top: 0;
-    color: #001c27;
-}
-
-.course-list-item {
-    list-style: none;
-    padding: 15px;
-    margin: 15px 0;
-    border: 1px solid #001c27;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s ease;
-}
-
-.course-list-item:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.course-list-item a {
-    color: #001c27;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 18px;
-    transition: text-decoration 0.3s ease;
-}
-
-.course-list-item a:hover {
-    text-decoration: underline;
-}
-
-.profile-circle {
+.lessons__chapter{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #2D9CDB;
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-    text-decoration: none;
+    flex-wrap: wrap;
+    gap: 40px;
 }
+
+.lessons__lesson{
+    width: 250px;
+    height: 50px;
+    background-color: #001C27;
+    color: white;
+    font-size: 32px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    border-left: #2D9CDB 5px solid;
+}
+
+
+
+.lessons__lesson-link {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+}
+
+
