--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -88,7 +88,7 @@ header {
 
 .hero {
   flex-direction: column;
-  background-color: rgb(rgb(2, 32, 122));
+  background-color: rgb(2, 32, 122);
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -343,4 +343,4 @@ header {
   justify-content: center;
 }
 
-}
+
