--- a/src/sass/base/_tab.scss
+++ b/src/sass/base/_tab.scss
@@ -1,56 +1,86 @@
 .tab {
-    background-color: #001c27;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 52px;
-    padding-top: 20px;
-    text-align: center;
-  }
-  
-  .tab__logo__text {
-    margin-top: 20px;
-    color: #0ac6d0;
-    font-size: 50px;
-  }
-  
-  .tab__mainicon {
-    margin-bottom: 120px;
-    margin-top: 50px;
-  }
-  
-  .tab__list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    flex-grow: 1;
-  }
-  
-  .tab__list__item {
-    margin-top: 50px;
-  }
-  
-  .tab__list__item__svg {
-    text-align: center;
-    
-  }
-  
-
-.settings__menu{
-    width: 346px;
-    height: 209px;
+  background-color: #001c27;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 52px;
+  padding-top: 20px;
+  text-align: center;
+  transition: background-color 0.3s ease;
 }
 
-.settings__menu{
-height: 70px;
-width: 298px;
+.tab:hover {
+  background-color: #002233; /* Slightly lighter shade for hover effect */
 }
 
-.tab__body{
+.tab__logo__text {
+  margin-top: 20px;
+  color: #0ac6d0;
+  font-size: 50px;
+  transition: color 0.3s ease;
+}
+
+.tab__logo__text:hover {
+  color: #1fd0e0; /* Slightly lighter shade for hover effect */
+}
+
+.tab__mainicon {
+  margin-bottom: 120px;
+  margin-top: 50px;
+  transition: transform 0.3s ease;
+}
+
+.tab__mainicon:hover {
+  transform: scale(1.1); /* Slight zoom effect on hover */
+}
+
+.tab__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  flex-grow: 1;
+}
+
+.tab__list__item {
+  margin-top: 50px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.tab__list__item:hover {
+  background-color: #002233; /* Slightly lighter shade for hover effect */
+  color: #ffffff; /* Change text color on hover */
+}
+
+.tab__list__item__svg {
+  text-align: center;
+  transition: fill 0.3s ease, transform 0.3s ease;
+}
+
+.tab__list__item__svg:hover {
+  fill: #1fd0e0; /* Change SVG fill color on hover */
+  transform: scale(1.1); /* Slight zoom effect on hover */
+}
+
+.settings__menu {
+  width: 346px;
+  height: 209px;
+  transition: background-color 0.3s ease;
+}
+
+.settings__menu:hover {
+  background-color: #002233; /* Slightly lighter shade for hover effect */
+}
+
+.settings__menu {
+  height: 70px;
+  width: 298px;
+}
+
+.tab__body {
   padding-left: 200px;
 }
