--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,4 +9,4 @@
 @import "./components/school/lessons";
 @import "./components/school/courses";
 @import "./components/learning";
-
+@import "./components/school/settings"
