--- a/src/sass/components/school/_rewiews.scss
+++ b/src/sass/components/school/_rewiews.scss
@@ -24,6 +24,7 @@
     box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     box-sizing: border-box;
+    margin-left: 174px;
 }
 
 #review-form input,
