--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -26,7 +26,7 @@ header {
 .nav {
   margin-left: 122px;
   width: 200px;
-    @media (max-width: 1440px) {
+    @media (min-width: 768px) {
       width: 800px;
   }
 }
@@ -76,6 +76,7 @@ header {
 }
 
 .profile__circle {
+  position: absolute;
   width: 40px;
   height: 40px;
   display: flex;
@@ -346,7 +347,7 @@ header {
   text-align: center;
   background-color: #2d9cdb;
   color: white;
-  margin-left: 20px;
+  margin-left: 80px;
   display: flex;
   justify-content: center;
 }
