--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -24,7 +24,6 @@ header {
 }
 
 .nav {
-  margin-left: 122px;
   width: 200px;
   display: flex;
 }
@@ -99,6 +98,7 @@ header {
 }
 
 .hero .container {
+  padding: 0;
   display: block;
   max-width: 1200px;
   margin: 0 auto;
@@ -408,6 +408,12 @@ header {
 }
 
 @media (max-width: 768px) {
+  .board__button{
+    margin-left: 50px;
+  }
+  .work__send{
+    display: none;
+  }
   .nav {
     flex-direction: column;
     align-items: flex-start;
